add typography; add link-to-router binding

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "common-mui-theme",
   "description": "Haiku MUI 5 theme which should be used in the ThemeProvider",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "private": true,
   "main": "./index.ts",
   "dependencies": {
@@ -9,5 +9,9 @@
   },
   "devDependencies": {
     "typescript": "5.1.6"
+  },
+  "peerDependencies": {
+    "react": ">=18",
+    "react-router-dom": ">=6"
   }
 }
