--- a/package.json
+++ b/package.json
@@ -28,17 +28,18 @@
   "devDependencies": {
     "@emotion/react": "11.11.1",
     "@emotion/styled": "11.11.0",
-    "dotenv": "16.3.1",
-    "clean-webpack-plugin": "4.0.0",
-    "copy-webpack-plugin": "11.0.0",
-    "css-loader": "6.8.1",
-    "html-webpack-plugin": "5.5.3",
+    "@trivago/prettier-plugin-sort-imports": "4.2.0",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "@typescript-eslint/eslint-plugin": "6.0.0",
     "@typescript-eslint/parser": "6.0.0",
+    "clean-webpack-plugin": "4.0.0",
+    "copy-webpack-plugin": "11.0.0",
+    "css-loader": "6.8.1",
+    "dotenv": "16.3.1",
     "eslint": "8.45.0",
     "eslint-config-prettier": "8.8.0",
+    "html-webpack-plugin": "5.5.3",
     "husky": "8.0.3",
     "lint-staged": "13.2.3",
     "npm-check": "6.0.1",
@@ -50,11 +51,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.14.2",
-    "style-loader": "3.3.3",
     "sass": "1.63.6",
     "sass-loader": "13.3.2",
     "source-map-explorer": "2.5.3",
     "source-map-loader": "4.0.1",
+    "style-loader": "3.3.3",
     "tailwindcss": "3.3.3",
     "ts-loader": "9.4.4",
     "typescript": "5.2.2",
