--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "common-mui-theme",
   "description": "Haiku MUI 5 theme which should be used in the ThemeProvider",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "private": true,
-  "main": "./index.ts",
+  "main": "src/index.ts",
   "repository": {
     "type": "git",
     "url": "git@github.com:haiku-inc/common-mui-theme.git"
@@ -29,7 +29,7 @@
     "@emotion/react": "11.11.1",
     "@emotion/styled": "11.11.0",
     "@trivago/prettier-plugin-sort-imports": "4.3.0",
-    "@types/react": "18.2.39",
+    "@types/react": "18.2.41",
     "@types/react-dom": "18.2.17",
     "@typescript-eslint/eslint-plugin": "6.13.1",
     "@typescript-eslint/parser": "6.13.1",
@@ -37,20 +37,20 @@
     "copy-webpack-plugin": "11.0.0",
     "css-loader": "6.8.1",
     "dotenv": "16.3.1",
-    "eslint": "8.54.0",
-    "eslint-config-prettier": "9.0.0",
+    "eslint": "8.55.0",
+    "eslint-config-prettier": "9.1.0",
     "html-webpack-plugin": "5.5.3",
     "husky": "8.0.3",
-    "lint-staged": "15.1.0",
+    "lint-staged": "15.2.0",
     "npm-check": "6.0.1",
-    "postcss": "8.4.31",
+    "postcss": "8.4.32",
     "postcss-loader": "7.3.3",
     "postcss-preset-env": "9.3.0",
     "prettier": "3.1.0",
     "prettier-plugin-organize-imports": "3.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "6.20.0",
+    "react-router-dom": "6.20.1",
     "sass": "1.69.5",
     "sass-loader": "13.3.2",
     "source-map-explorer": "2.5.3",
